--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h3 class="tagline">Venkatapur, Ghatkesar, Medchal–Malkajgiri district,<br> Hyderabad, Telangana, India. 500 088.</h3>
 
             <nav class="nav primary-nav">
-                <a href="anurag.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href="register1.html">Register</a>
                 <a href="courses.html">Courses</a>
                 <a href="contact2.html">Contact Us</a>
