--- a/contact2.html
+++ b/contact2.html
@@ -12,7 +12,7 @@
             <h3 class="tagline">Venkatapur, Ghatkesar, Hyderabad, Telangana</h3>
 
             <nav class="nav primary-nav">
-                <a href="anurag.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href="register1.html">Register</a>
                 <a href="courses.html">Courses</a>
                 <a href="contact2.html">Contact Us</a>
